to avoid conflict with obsolete GUIminer settings poolhost parameter changed to bitpenny.dyndns-ip.com

--- a/src/bitpenny.conf
+++ b/src/bitpenny.conf
@@ -11,7 +11,7 @@ rpcallowip=
 # set 1 for pooled mining and 0 for solo mining
 # can be changed with "setpool true|false" rpc command
 pool=1
-poolhost=bitpenny.dyndns.biz
+poolhost=bitpenny.dyndns-ip.com
 poolport=8338
 
 # pooluserid must be a valid Bitcoin address
